--- a/app/views/calculator.html.twig
+++ b/app/views/calculator.html.twig
@@ -1,12 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <form id="form-calculator" action="/add" method="POST">
-        <label for="number-1">number 1</label>
-        <input type="text" id="number-1" name="number_1">
+    <form id="form-calculator" action="/result" method="POST">
+        <label for="expression">Calculator</label>
         <br>
-        <label for="number-2">number 2</label>
-        <input type="text" id="number-2" name="number_2">
+        <input type="text" id="expression" name="expression">
         <br>
         <button id="btn-result">result</button>
     </form>    
